<resources>
    <string name="app_name">FirstPrac</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="brand_logo">Brand Logo</string>
    <string name="login">Login</string>
    <string name="not_a_member">Not a Member?</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="ages">Ages</string>
    <string name="let_s_join">Let\'s Join</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="nama_produk">Nama Produk</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="productimage">ProductImage</string>
    <string name="text_description_produk_here">Text Description Produk Here !</string>
    <string name="dummy_text_long">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which dont look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn\'t anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.</string>
    <string name="title_produk">Title Produk</string>
    <string name="rp_20_000">Rp. 20.000</string>
    <string name="description">Description</string>
    <string name="image_product">Image Product</string>
    <string name="available_stock">Available Stock :</string>
</resources>
