<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_item_list"
    android:layout_marginBottom="7dp"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/imageViewProduct"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:contentDescription="@string/productimage" />
    <ImageView
        android:id="@+id/imageViewSold"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:scaleType="center"
        android:background="@color/colorFadeBlack"
        android:src="@drawable/ic_sold"
        android:contentDescription="@string/productimage" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageViewProduct"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewNamaProduk"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="7dp"
            android:text="@string/nama_produk"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:fontFamily="@font/neo_sans"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/textDescription"
            android:layout_marginTop="5dp"
            android:text="@string/text_description_produk_here"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="3"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/textViewPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:fontFamily="@font/neo_sans"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_alignParentStart="true"
                android:text="@string/price"/>
            <TextView
                android:id="@+id/textViewQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:background="@drawable/bg_on_stock_list"
                android:fontFamily="@font/neo_sans"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="20dp"
                android:text="@string/quantity"/>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>