<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">
        <ImageView
            android:id="@+id/imageViewBrandIcon"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_brand"
            android:contentDescription="@string/brand_logo"/>
        <TextView
            android:id="@+id/textViewEmail"
            android:layout_below="@id/imageViewBrandIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:text="@string/email"/>

        <EditText
            android:id="@+id/editTextEmail"
            android:inputType="textEmailAddress"
            android:layout_below="@id/textViewEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/textViewEmail"/>

        <TextView
            android:id="@+id/textViewPassword"
            android:layout_below="@id/editTextEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/password"/>

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_below="@id/textViewPassword"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/textViewPassword"/>

        <Button
            android:id="@+id/buttonLogin"
            android:layout_below="@+id/editTextPassword"
            android:background="@color/colorAccent"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"/>
    </RelativeLayout>


</RelativeLayout>